@@ -54,11 +54,14 @@ def db():
 def test_missing(backend, db, full):
     # Create two objects, one will be missing
     obj_ids = (22, 25)
+    data = b'just some data that no-one really cares about'
     for id_ in obj_ids:
         db.execute('INSERT INTO objects (id, refcount, size) VALUES(?, ?, ?)',
                    (id_, 1, 27 * id_))
+        db.execute('INSERT INTO blocks (id, obj_id, size) VALUES(?,?,?)',
+                   (id_, id_, len(data)))
     key = 's3ql_data_%d' % obj_ids[0]
-    backend[key] = b'just some data that no-one really cares about'
+    backend[key] = data
 
     # When using a single thread, we can fake the backend factory
     backend_factory = lambda: backend
@@ -74,13 +77,16 @@ def test_missing(backend, db, full):
 @pytest.mark.parametrize("full", (True, False))
 def test_corrupted_head(backend, db, full):
     obj_ids = (30, 31)
+    data = b'just some data that no-one really cares about'
     for id_ in obj_ids:
         db.execute('INSERT INTO objects (id, refcount, size) VALUES(?, ?, ?)',
                    (id_, 1, 27 * id_))
+        db.execute('INSERT INTO blocks (id, obj_id, size) VALUES(?,?,?)',
+                   (id_, id_, len(data)))
 
     # Object one will be fine
     key = 's3ql_data_%d' % obj_ids[0]
-    backend[key] = b'just some data that no-one really cares about'
+    backend[key] = data
 
     # Object two will have a checksum error in the metadata
     key = 's3ql_data_%d' % obj_ids[1]
@@ -108,17 +114,16 @@ def test_corrupted_head(backend, db, full):
 @pytest.mark.parametrize("full", (True, False))
 def test_corrupted_body(backend, db, full):
     obj_ids = (35, 40)
+    data = b'just some data that no-one really cares about'
     for id_ in obj_ids:
         db.execute('INSERT INTO objects (id, refcount, size) VALUES(?, ?, ?)',
                    (id_, 1, 27 * id_))
+        db.execute('INSERT INTO blocks (id, obj_id, size) VALUES(?,?,?)',
+                   (id_, id_, len(data)))
+        backend['s3ql_data_%d' % id_] = data
 
-    # Object one will be fine
-    key = 's3ql_data_%d' % obj_ids[0]
-    backend[key] = b'just some data that no-one really cares about'
-
-    # Object two will have a checksum error in the body
+    # Introduce checksum error
     key = 's3ql_data_%d' % obj_ids[1]
-    backend[key] = b'some data that will be broken on a data check'
     (raw, meta) = backend.backend.fetch(key)
     raw = bytearray(raw)
     assert len(raw) > 20
@@ -137,6 +142,38 @@ def test_corrupted_body(backend, db, full):
                                     thread_count=1, full=full)
             assert missing_fh.getvalue() == ''
             assert corrupted_fh.getvalue() == 's3ql_data_%d\n' % obj_ids[1]
+    else:
+        # Should not show up when looking just at HEAD
+        verify.retrieve_objects(db, backend_factory, corrupted_fh, missing_fh,
+                                thread_count=1, full=full)
+        assert missing_fh.getvalue() == ''
+        assert corrupted_fh.getvalue() == ''
+
+
+@pytest.mark.parametrize("full", (True, False))
+def test_truncated_body(backend, db, full):
+    id_ = 35
+    data = b'just some data that no-one really cares about'
+    db.execute('INSERT INTO objects (id, refcount, size) VALUES(?, ?, ?)',
+               (id_, 1, 27 * id_))
+    db.execute('INSERT INTO blocks (id, obj_id, size) VALUES(?,?,?)',
+               (id_, id_, len(data)+1))
+
+    key = 's3ql_data_%d' % id_
+    backend[key] = data
+
+    # When using a single thread, we can fake the backend factory
+    backend_factory = lambda: backend
+
+    missing_fh = io.StringIO()
+    corrupted_fh = io.StringIO()
+
+    if full:
+        with assert_logs('^Object %d is corrupted', count=1, level=logging.WARNING):
+            verify.retrieve_objects(db, backend_factory, corrupted_fh, missing_fh,
+                                    thread_count=1, full=full)
+            assert missing_fh.getvalue() == ''
+            assert corrupted_fh.getvalue() == 's3ql_data_%d\n' % id_
     else:
         # Should not show up when looking just at HEAD
         verify.retrieve_objects(db, backend_factory, corrupted_fh, missing_fh,
