@@ -4,6 +4,9 @@ UNRELEASED CHANGES
     `setup.py build_sphinx`, run `./build_docs.sh`. To generate PDF
     documentation, follow this with `cd doc/pdf && make`.
 
+  * The `s3ql_verify` tool is now able to detect the kind of corruption that
+    was introduced by the fsck.s3ql data corruption bug described below.
+
 2021-06-03, S3QL 3.7.3
 
   * Fixed a DATA CORRUPTION bug in fsck.s3ql that caused the recorded size of uploaded
